<layout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.android.stephen.upoints_customer.fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_image"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_below="@+id/imgProfilePic"
        android:id="@+id/tvCustID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text=""/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tvCustID"
        android:id="@+id/llCustomerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_name" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/llCustomerName"
        android:id="@+id/llBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_birthdate" />

        <TextView
            android:id="@+id/tvBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/llBirthdate"
        android:id="@+id/llEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_email" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/llEmailAddress"
        android:id="@+id/llMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_mobile" />

        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/llMobile"
        android:id="@+id/llTotalPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_totalPoints" />

        <TextView
            android:id="@+id/tvTotalUPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/llTotalPoints"
        android:id="@+id/llRemainingPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_remainingPoints" />

        <TextView
            android:id="@+id/tvTotalRemainingUPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@+id/llRemainingPoints"
        android:id="@+id/llTotalWDPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/customer_totalWDPoints" />

        <TextView
            android:id="@+id/tvTotalWDPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:text="" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>
</layout>